--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/cli": "^54.0.20",
     "expo": "^51.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6"
