--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.11.3"
   },
   "devDependencies": {
