--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "IMS",
   "start_url": "/dashboard.html",
   "display": "standalone",
-  "display_override": ["standalone", "fullscreen"],
+  "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "scope": "/",
   "theme_color": "#0f172a",
   "background_color": "#0f172a",
