--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
     "json2csv": "^6.0.0-alpha.2",
+    "nodemailer": "^6.9.11",
     "pg": "^8.11.3"
   },
   "devDependencies": {
